src/snapshots/redmine_tui_draft__test_support__date_picker_popup_calendar_closed_60x24.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 60, height: 24 }
00: "                                                            "
01: "                                                            "
02: "                                                            "
03: "                                                            "
04: "                                                            "
05: "                                                            "
06: "                                                            "
07: "                                                            "
08: "              ┌日 付 選 択 ─────────────────────┐               " | 14:"┌" fg=Reset bg=Reset mod=NONE, 15:"日" fg=Reset bg=Reset mod=NONE, 17:"付" fg=Reset bg=Reset mod=NONE, 19:"選" fg=Reset bg=Reset mod=NONE, 21:"択" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"┐" fg=Reset bg=Reset mod=NONE
09: "              │┌年 ───────┐┌月 ──┐┌日 ──┐      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"┌" fg=DarkGray bg=Reset mod=NONE, 16:"年" fg=DarkGray bg=Reset mod=NONE, 18:"─" fg=DarkGray bg=Reset mod=NONE, 19:"─" fg=DarkGray bg=Reset mod=NONE, 20:"─" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"─" fg=DarkGray bg=Reset mod=NONE, 24:"─" fg=DarkGray bg=Reset mod=NONE, 25:"┐" fg=DarkGray bg=Reset mod=NONE, 26:"┌" fg=DarkGray bg=Reset mod=NONE, 27:"月" fg=DarkGray bg=Reset mod=NONE, 29:"─" fg=DarkGray bg=Reset mod=NONE, 30:"─" fg=DarkGray bg=Reset mod=NONE, 31:"┐" fg=DarkGray bg=Reset mod=NONE, 32:"┌" fg=DarkGray bg=Reset mod=NONE, 33:"日" fg=DarkGray bg=Reset mod=NONE, 35:"─" fg=DarkGray bg=Reset mod=NONE, 36:"─" fg=DarkGray bg=Reset mod=NONE, 37:"┐" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
10: "              ││2026     ││02  ││16  │      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"│" fg=DarkGray bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=UNDERLINED, 17:"0" fg=Reset bg=Reset mod=UNDERLINED, 18:"2" fg=Reset bg=Reset mod=UNDERLINED, 19:"6" fg=Reset bg=Reset mod=UNDERLINED, 20:" " fg=Reset bg=Reset mod=REVERSED, 25:"│" fg=DarkGray bg=Reset mod=NONE, 26:"│" fg=DarkGray bg=Reset mod=NONE, 27:"0" fg=Reset bg=Reset mod=UNDERLINED, 28:"2" fg=Reset bg=Reset mod=UNDERLINED, 29:" " fg=Reset bg=Reset mod=REVERSED, 31:"│" fg=DarkGray bg=Reset mod=NONE, 32:"│" fg=DarkGray bg=Reset mod=NONE, 33:"1" fg=Reset bg=Reset mod=UNDERLINED, 34:"6" fg=Reset bg=Reset mod=UNDERLINED, 35:" " fg=Reset bg=Reset mod=REVERSED, 37:"│" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
11: "              │└─────────┘└────┘└────┘      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"└" fg=DarkGray bg=Reset mod=NONE, 16:"─" fg=DarkGray bg=Reset mod=NONE, 17:"─" fg=DarkGray bg=Reset mod=NONE, 18:"─" fg=DarkGray bg=Reset mod=NONE, 19:"─" fg=DarkGray bg=Reset mod=NONE, 20:"─" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"─" fg=DarkGray bg=Reset mod=NONE, 24:"─" fg=DarkGray bg=Reset mod=NONE, 25:"┘" fg=DarkGray bg=Reset mod=NONE, 26:"└" fg=DarkGray bg=Reset mod=NONE, 27:"─" fg=DarkGray bg=Reset mod=NONE, 28:"─" fg=DarkGray bg=Reset mod=NONE, 29:"─" fg=DarkGray bg=Reset mod=NONE, 30:"─" fg=DarkGray bg=Reset mod=NONE, 31:"┘" fg=DarkGray bg=Reset mod=NONE, 32:"└" fg=DarkGray bg=Reset mod=NONE, 33:"─" fg=DarkGray bg=Reset mod=NONE, 34:"─" fg=DarkGray bg=Reset mod=NONE, 35:"─" fg=DarkGray bg=Reset mod=NONE, 36:"─" fg=DarkGray bg=Reset mod=NONE, 37:"┘" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
12: "              │┌──────────┐┌──────────┐     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"┌" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"┐" fg=Reset bg=Reset mod=NONE, 27:"┌" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"┐" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
13: "              ││カ レ ン ダ ー ││キ ャ ン セ ル │     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"│" fg=Reset bg=Reset mod=NONE, 16:"カ" fg=Reset bg=Reset mod=NONE, 18:"レ" fg=Reset bg=Reset mod=NONE, 20:"ン" fg=Reset bg=Reset mod=NONE, 22:"ダ" fg=Reset bg=Reset mod=NONE, 24:"ー" fg=Reset bg=Reset mod=NONE, 26:"│" fg=Reset bg=Reset mod=NONE, 27:"│" fg=Reset bg=Reset mod=NONE, 28:"キ" fg=Reset bg=Reset mod=NONE, 30:"ャ" fg=Reset bg=Reset mod=NONE, 32:"ン" fg=Reset bg=Reset mod=NONE, 34:"セ" fg=Reset bg=Reset mod=NONE, 36:"ル" fg=Reset bg=Reset mod=NONE, 38:"│" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
14: "              │└──────────┘└──────────┘     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"└" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"┘" fg=Reset bg=Reset mod=NONE, 27:"└" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"┘" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
15: "              └─────────────────────────────┘               " | 14:"└" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"┘" fg=Reset bg=Reset mod=NONE
16: "                                                            "
17: "                                                            "
18: "                                                            "
19: "                                                            "
20: "                                                            "
21: "                                                            "
22: "                                                            "
23: "                                                            "
