src/snapshots/redmine_tui_draft__test_support__date_picker_popup_whole_widget_31x17.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 31, height: 17 }
00: "┌日 付 選 択 ─────────────────────┐" | 0:"┌" fg=Reset bg=Reset mod=NONE, 1:"日" fg=Reset bg=Reset mod=NONE, 3:"付" fg=Reset bg=Reset mod=NONE, 5:"選" fg=Reset bg=Reset mod=NONE, 7:"択" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"┐" fg=Reset bg=Reset mod=NONE
01: "│┌年 ───────┐┌月 ──┐┌日 ──┐      │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:"┌" fg=DarkGray bg=Reset mod=NONE, 2:"年" fg=DarkGray bg=Reset mod=NONE, 4:"─" fg=DarkGray bg=Reset mod=NONE, 5:"─" fg=DarkGray bg=Reset mod=NONE, 6:"─" fg=DarkGray bg=Reset mod=NONE, 7:"─" fg=DarkGray bg=Reset mod=NONE, 8:"─" fg=DarkGray bg=Reset mod=NONE, 9:"─" fg=DarkGray bg=Reset mod=NONE, 10:"─" fg=DarkGray bg=Reset mod=NONE, 11:"┐" fg=DarkGray bg=Reset mod=NONE, 12:"┌" fg=DarkGray bg=Reset mod=NONE, 13:"月" fg=DarkGray bg=Reset mod=NONE, 15:"─" fg=DarkGray bg=Reset mod=NONE, 16:"─" fg=DarkGray bg=Reset mod=NONE, 17:"┐" fg=DarkGray bg=Reset mod=NONE, 18:"┌" fg=DarkGray bg=Reset mod=NONE, 19:"日" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"┐" fg=DarkGray bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
02: "││2026     ││02  ││16  │      │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:"│" fg=DarkGray bg=Reset mod=NONE, 2:"2" fg=Reset bg=Reset mod=UNDERLINED, 3:"0" fg=Reset bg=Reset mod=UNDERLINED, 4:"2" fg=Reset bg=Reset mod=UNDERLINED, 5:"6" fg=Reset bg=Reset mod=UNDERLINED, 6:" " fg=Reset bg=Reset mod=REVERSED, 11:"│" fg=DarkGray bg=Reset mod=NONE, 12:"│" fg=DarkGray bg=Reset mod=NONE, 13:"0" fg=Reset bg=Reset mod=UNDERLINED, 14:"2" fg=Reset bg=Reset mod=UNDERLINED, 15:" " fg=Reset bg=Reset mod=REVERSED, 17:"│" fg=DarkGray bg=Reset mod=NONE, 18:"│" fg=DarkGray bg=Reset mod=NONE, 19:"1" fg=Reset bg=Reset mod=UNDERLINED, 20:"6" fg=Reset bg=Reset mod=UNDERLINED, 21:" " fg=Reset bg=Reset mod=REVERSED, 23:"│" fg=DarkGray bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
03: "│└─────────┘└────┘└────┘      │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:"└" fg=DarkGray bg=Reset mod=NONE, 2:"─" fg=DarkGray bg=Reset mod=NONE, 3:"─" fg=DarkGray bg=Reset mod=NONE, 4:"─" fg=DarkGray bg=Reset mod=NONE, 5:"─" fg=DarkGray bg=Reset mod=NONE, 6:"─" fg=DarkGray bg=Reset mod=NONE, 7:"─" fg=DarkGray bg=Reset mod=NONE, 8:"─" fg=DarkGray bg=Reset mod=NONE, 9:"─" fg=DarkGray bg=Reset mod=NONE, 10:"─" fg=DarkGray bg=Reset mod=NONE, 11:"┘" fg=DarkGray bg=Reset mod=NONE, 12:"└" fg=DarkGray bg=Reset mod=NONE, 13:"─" fg=DarkGray bg=Reset mod=NONE, 14:"─" fg=DarkGray bg=Reset mod=NONE, 15:"─" fg=DarkGray bg=Reset mod=NONE, 16:"─" fg=DarkGray bg=Reset mod=NONE, 17:"┘" fg=DarkGray bg=Reset mod=NONE, 18:"└" fg=DarkGray bg=Reset mod=NONE, 19:"─" fg=DarkGray bg=Reset mod=NONE, 20:"─" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"┘" fg=DarkGray bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
04: "│                             │" | 0:"│" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
05: "│        February 2026        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:" " fg=LightGreen bg=Reset mod=NONE, 2:" " fg=LightGreen bg=Reset mod=NONE, 3:" " fg=LightGreen bg=Reset mod=NONE, 4:" " fg=LightGreen bg=Reset mod=NONE, 5:" " fg=LightGreen bg=Reset mod=NONE, 6:" " fg=LightGreen bg=Reset mod=NONE, 7:" " fg=LightGreen bg=Reset mod=NONE, 8:" " fg=LightGreen bg=Reset mod=NONE, 9:"F" fg=LightGreen bg=Reset mod=NONE, 10:"e" fg=LightGreen bg=Reset mod=NONE, 11:"b" fg=LightGreen bg=Reset mod=NONE, 12:"r" fg=LightGreen bg=Reset mod=NONE, 13:"u" fg=LightGreen bg=Reset mod=NONE, 14:"a" fg=LightGreen bg=Reset mod=NONE, 15:"r" fg=LightGreen bg=Reset mod=NONE, 16:"y" fg=LightGreen bg=Reset mod=NONE, 17:" " fg=LightGreen bg=Reset mod=NONE, 18:"2" fg=LightGreen bg=Reset mod=NONE, 19:"0" fg=LightGreen bg=Reset mod=NONE, 20:"2" fg=LightGreen bg=Reset mod=NONE, 21:"6" fg=LightGreen bg=Reset mod=NONE, 22:" " fg=LightGreen bg=Reset mod=NONE, 23:" " fg=LightGreen bg=Reset mod=NONE, 24:" " fg=LightGreen bg=Reset mod=NONE, 25:" " fg=LightGreen bg=Reset mod=NONE, 26:" " fg=LightGreen bg=Reset mod=NONE, 27:" " fg=LightGreen bg=Reset mod=NONE, 28:" " fg=LightGreen bg=Reset mod=NONE, 29:" " fg=LightGreen bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
06: "│ Su Mo Tu We Th Fr Sa        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 1:" " fg=DarkGray bg=Reset mod=NONE, 2:"S" fg=DarkGray bg=Reset mod=NONE, 3:"u" fg=DarkGray bg=Reset mod=NONE, 4:" " fg=DarkGray bg=Reset mod=NONE, 5:"M" fg=DarkGray bg=Reset mod=NONE, 6:"o" fg=DarkGray bg=Reset mod=NONE, 7:" " fg=DarkGray bg=Reset mod=NONE, 8:"T" fg=DarkGray bg=Reset mod=NONE, 9:"u" fg=DarkGray bg=Reset mod=NONE, 10:" " fg=DarkGray bg=Reset mod=NONE, 11:"W" fg=DarkGray bg=Reset mod=NONE, 12:"e" fg=DarkGray bg=Reset mod=NONE, 13:" " fg=DarkGray bg=Reset mod=NONE, 14:"T" fg=DarkGray bg=Reset mod=NONE, 15:"h" fg=DarkGray bg=Reset mod=NONE, 16:" " fg=DarkGray bg=Reset mod=NONE, 17:"F" fg=DarkGray bg=Reset mod=NONE, 18:"r" fg=DarkGray bg=Reset mod=NONE, 19:" " fg=DarkGray bg=Reset mod=NONE, 20:"S" fg=DarkGray bg=Reset mod=NONE, 21:"a" fg=DarkGray bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
07: "│  1  2  3  4  5  6  7        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 3:"1" fg=Reset bg=Reset mod=NONE, 6:"2" fg=Reset bg=Reset mod=NONE, 9:"3" fg=Reset bg=Reset mod=NONE, 12:"4" fg=Reset bg=Reset mod=NONE, 15:"5" fg=Reset bg=Reset mod=NONE, 18:"6" fg=Reset bg=Reset mod=NONE, 21:"7" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
08: "│  8  9 10 11 12 13 14        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 3:"8" fg=Reset bg=Reset mod=NONE, 6:"9" fg=Reset bg=Reset mod=NONE, 8:"1" fg=Reset bg=Reset mod=NONE, 9:"0" fg=Reset bg=Reset mod=NONE, 11:"1" fg=Reset bg=Reset mod=NONE, 12:"1" fg=Reset bg=Reset mod=NONE, 14:"1" fg=Reset bg=Reset mod=NONE, 15:"2" fg=Reset bg=Reset mod=NONE, 17:"1" fg=Reset bg=Reset mod=NONE, 18:"3" fg=Reset bg=Reset mod=NONE, 20:"1" fg=Reset bg=Reset mod=NONE, 21:"4" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
09: "│ 15 16 17 18 19 20 21        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 2:"1" fg=Reset bg=Reset mod=NONE, 3:"5" fg=Reset bg=Reset mod=NONE, 5:"1" fg=White bg=Rgb(26, 51, 34) mod=NONE, 6:"6" fg=White bg=Rgb(26, 51, 34) mod=NONE, 8:"1" fg=Reset bg=Reset mod=NONE, 9:"7" fg=Reset bg=Reset mod=NONE, 11:"1" fg=Reset bg=Reset mod=NONE, 12:"8" fg=Reset bg=Reset mod=NONE, 14:"1" fg=Reset bg=Reset mod=NONE, 15:"9" fg=Reset bg=Reset mod=NONE, 17:"2" fg=Reset bg=Reset mod=NONE, 18:"0" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"1" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
10: "│ 22 23 24 25 26 27 28        │" | 0:"│" fg=Reset bg=Reset mod=NONE, 2:"2" fg=Reset bg=Reset mod=NONE, 3:"2" fg=Reset bg=Reset mod=NONE, 5:"2" fg=Reset bg=Reset mod=NONE, 6:"3" fg=Reset bg=Reset mod=NONE, 8:"2" fg=Reset bg=Reset mod=NONE, 9:"4" fg=Reset bg=Reset mod=NONE, 11:"2" fg=Reset bg=Reset mod=NONE, 12:"5" fg=Reset bg=Reset mod=NONE, 14:"2" fg=Reset bg=Reset mod=NONE, 15:"6" fg=Reset bg=Reset mod=NONE, 17:"2" fg=Reset bg=Reset mod=NONE, 18:"7" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"8" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
11: "│                             │" | 0:"│" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
12: "│                             │" | 0:"│" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
13: "│            ┌──────────┐     │" | 0:"│" fg=Reset bg=Reset mod=NONE, 13:"┌" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"┐" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
14: "│            │キ ャ ン セ ル │     │" | 0:"│" fg=Reset bg=Reset mod=NONE, 13:"│" fg=Reset bg=Reset mod=NONE, 14:"キ" fg=Reset bg=Reset mod=NONE, 16:"ャ" fg=Reset bg=Reset mod=NONE, 18:"ン" fg=Reset bg=Reset mod=NONE, 20:"セ" fg=Reset bg=Reset mod=NONE, 22:"ル" fg=Reset bg=Reset mod=NONE, 24:"│" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
15: "│            └──────────┘     │" | 0:"│" fg=Reset bg=Reset mod=NONE, 13:"└" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"┘" fg=Reset bg=Reset mod=NONE, 30:"│" fg=Reset bg=Reset mod=NONE
16: "└─────────────────────────────┘" | 0:"└" fg=Reset bg=Reset mod=NONE, 1:"─" fg=Reset bg=Reset mod=NONE, 2:"─" fg=Reset bg=Reset mod=NONE, 3:"─" fg=Reset bg=Reset mod=NONE, 4:"─" fg=Reset bg=Reset mod=NONE, 5:"─" fg=Reset bg=Reset mod=NONE, 6:"─" fg=Reset bg=Reset mod=NONE, 7:"─" fg=Reset bg=Reset mod=NONE, 8:"─" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"┘" fg=Reset bg=Reset mod=NONE
