src/snapshots/redmine_tui_draft__test_support__date_picker_popup_whole_widget_60x24.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 60, height: 24 }
00: "                                                            "
01: "                                                            "
02: "                                                            "
03: "              ┌日 付 選 択 ─────────────────────┐               " | 14:"┌" fg=Reset bg=Reset mod=NONE, 15:"日" fg=Reset bg=Reset mod=NONE, 17:"付" fg=Reset bg=Reset mod=NONE, 19:"選" fg=Reset bg=Reset mod=NONE, 21:"択" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"┐" fg=Reset bg=Reset mod=NONE
04: "              │┌年 ───────┐┌月 ──┐┌日 ──┐      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"┌" fg=DarkGray bg=Reset mod=NONE, 16:"年" fg=DarkGray bg=Reset mod=NONE, 18:"─" fg=DarkGray bg=Reset mod=NONE, 19:"─" fg=DarkGray bg=Reset mod=NONE, 20:"─" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"─" fg=DarkGray bg=Reset mod=NONE, 24:"─" fg=DarkGray bg=Reset mod=NONE, 25:"┐" fg=DarkGray bg=Reset mod=NONE, 26:"┌" fg=DarkGray bg=Reset mod=NONE, 27:"月" fg=DarkGray bg=Reset mod=NONE, 29:"─" fg=DarkGray bg=Reset mod=NONE, 30:"─" fg=DarkGray bg=Reset mod=NONE, 31:"┐" fg=DarkGray bg=Reset mod=NONE, 32:"┌" fg=DarkGray bg=Reset mod=NONE, 33:"日" fg=DarkGray bg=Reset mod=NONE, 35:"─" fg=DarkGray bg=Reset mod=NONE, 36:"─" fg=DarkGray bg=Reset mod=NONE, 37:"┐" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
05: "              ││2026     ││02  ││16  │      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"│" fg=DarkGray bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=UNDERLINED, 17:"0" fg=Reset bg=Reset mod=UNDERLINED, 18:"2" fg=Reset bg=Reset mod=UNDERLINED, 19:"6" fg=Reset bg=Reset mod=UNDERLINED, 20:" " fg=Reset bg=Reset mod=REVERSED, 25:"│" fg=DarkGray bg=Reset mod=NONE, 26:"│" fg=DarkGray bg=Reset mod=NONE, 27:"0" fg=Reset bg=Reset mod=UNDERLINED, 28:"2" fg=Reset bg=Reset mod=UNDERLINED, 29:" " fg=Reset bg=Reset mod=REVERSED, 31:"│" fg=DarkGray bg=Reset mod=NONE, 32:"│" fg=DarkGray bg=Reset mod=NONE, 33:"1" fg=Reset bg=Reset mod=UNDERLINED, 34:"6" fg=Reset bg=Reset mod=UNDERLINED, 35:" " fg=Reset bg=Reset mod=REVERSED, 37:"│" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
06: "              │└─────────┘└────┘└────┘      │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:"└" fg=DarkGray bg=Reset mod=NONE, 16:"─" fg=DarkGray bg=Reset mod=NONE, 17:"─" fg=DarkGray bg=Reset mod=NONE, 18:"─" fg=DarkGray bg=Reset mod=NONE, 19:"─" fg=DarkGray bg=Reset mod=NONE, 20:"─" fg=DarkGray bg=Reset mod=NONE, 21:"─" fg=DarkGray bg=Reset mod=NONE, 22:"─" fg=DarkGray bg=Reset mod=NONE, 23:"─" fg=DarkGray bg=Reset mod=NONE, 24:"─" fg=DarkGray bg=Reset mod=NONE, 25:"┘" fg=DarkGray bg=Reset mod=NONE, 26:"└" fg=DarkGray bg=Reset mod=NONE, 27:"─" fg=DarkGray bg=Reset mod=NONE, 28:"─" fg=DarkGray bg=Reset mod=NONE, 29:"─" fg=DarkGray bg=Reset mod=NONE, 30:"─" fg=DarkGray bg=Reset mod=NONE, 31:"┘" fg=DarkGray bg=Reset mod=NONE, 32:"└" fg=DarkGray bg=Reset mod=NONE, 33:"─" fg=DarkGray bg=Reset mod=NONE, 34:"─" fg=DarkGray bg=Reset mod=NONE, 35:"─" fg=DarkGray bg=Reset mod=NONE, 36:"─" fg=DarkGray bg=Reset mod=NONE, 37:"┘" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
07: "              │                             │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
08: "              │        February 2026        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:" " fg=LightGreen bg=Reset mod=NONE, 16:" " fg=LightGreen bg=Reset mod=NONE, 17:" " fg=LightGreen bg=Reset mod=NONE, 18:" " fg=LightGreen bg=Reset mod=NONE, 19:" " fg=LightGreen bg=Reset mod=NONE, 20:" " fg=LightGreen bg=Reset mod=NONE, 21:" " fg=LightGreen bg=Reset mod=NONE, 22:" " fg=LightGreen bg=Reset mod=NONE, 23:"F" fg=LightGreen bg=Reset mod=NONE, 24:"e" fg=LightGreen bg=Reset mod=NONE, 25:"b" fg=LightGreen bg=Reset mod=NONE, 26:"r" fg=LightGreen bg=Reset mod=NONE, 27:"u" fg=LightGreen bg=Reset mod=NONE, 28:"a" fg=LightGreen bg=Reset mod=NONE, 29:"r" fg=LightGreen bg=Reset mod=NONE, 30:"y" fg=LightGreen bg=Reset mod=NONE, 31:" " fg=LightGreen bg=Reset mod=NONE, 32:"2" fg=LightGreen bg=Reset mod=NONE, 33:"0" fg=LightGreen bg=Reset mod=NONE, 34:"2" fg=LightGreen bg=Reset mod=NONE, 35:"6" fg=LightGreen bg=Reset mod=NONE, 36:" " fg=LightGreen bg=Reset mod=NONE, 37:" " fg=LightGreen bg=Reset mod=NONE, 38:" " fg=LightGreen bg=Reset mod=NONE, 39:" " fg=LightGreen bg=Reset mod=NONE, 40:" " fg=LightGreen bg=Reset mod=NONE, 41:" " fg=LightGreen bg=Reset mod=NONE, 42:" " fg=LightGreen bg=Reset mod=NONE, 43:" " fg=LightGreen bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
09: "              │ Su Mo Tu We Th Fr Sa        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 15:" " fg=DarkGray bg=Reset mod=NONE, 16:"S" fg=DarkGray bg=Reset mod=NONE, 17:"u" fg=DarkGray bg=Reset mod=NONE, 18:" " fg=DarkGray bg=Reset mod=NONE, 19:"M" fg=DarkGray bg=Reset mod=NONE, 20:"o" fg=DarkGray bg=Reset mod=NONE, 21:" " fg=DarkGray bg=Reset mod=NONE, 22:"T" fg=DarkGray bg=Reset mod=NONE, 23:"u" fg=DarkGray bg=Reset mod=NONE, 24:" " fg=DarkGray bg=Reset mod=NONE, 25:"W" fg=DarkGray bg=Reset mod=NONE, 26:"e" fg=DarkGray bg=Reset mod=NONE, 27:" " fg=DarkGray bg=Reset mod=NONE, 28:"T" fg=DarkGray bg=Reset mod=NONE, 29:"h" fg=DarkGray bg=Reset mod=NONE, 30:" " fg=DarkGray bg=Reset mod=NONE, 31:"F" fg=DarkGray bg=Reset mod=NONE, 32:"r" fg=DarkGray bg=Reset mod=NONE, 33:" " fg=DarkGray bg=Reset mod=NONE, 34:"S" fg=DarkGray bg=Reset mod=NONE, 35:"a" fg=DarkGray bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
10: "              │  1  2  3  4  5  6  7        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 17:"1" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 23:"3" fg=Reset bg=Reset mod=NONE, 26:"4" fg=Reset bg=Reset mod=NONE, 29:"5" fg=Reset bg=Reset mod=NONE, 32:"6" fg=Reset bg=Reset mod=NONE, 35:"7" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
11: "              │  8  9 10 11 12 13 14        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 17:"8" fg=Reset bg=Reset mod=NONE, 20:"9" fg=Reset bg=Reset mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"0" fg=Reset bg=Reset mod=NONE, 25:"1" fg=Reset bg=Reset mod=NONE, 26:"1" fg=Reset bg=Reset mod=NONE, 28:"1" fg=Reset bg=Reset mod=NONE, 29:"2" fg=Reset bg=Reset mod=NONE, 31:"1" fg=Reset bg=Reset mod=NONE, 32:"3" fg=Reset bg=Reset mod=NONE, 34:"1" fg=Reset bg=Reset mod=NONE, 35:"4" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
12: "              │ 15 16 17 18 19 20 21        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 16:"1" fg=Reset bg=Reset mod=NONE, 17:"5" fg=Reset bg=Reset mod=NONE, 19:"1" fg=White bg=Rgb(26, 51, 34) mod=NONE, 20:"6" fg=White bg=Rgb(26, 51, 34) mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"7" fg=Reset bg=Reset mod=NONE, 25:"1" fg=Reset bg=Reset mod=NONE, 26:"8" fg=Reset bg=Reset mod=NONE, 28:"1" fg=Reset bg=Reset mod=NONE, 29:"9" fg=Reset bg=Reset mod=NONE, 31:"2" fg=Reset bg=Reset mod=NONE, 32:"0" fg=Reset bg=Reset mod=NONE, 34:"2" fg=Reset bg=Reset mod=NONE, 35:"1" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
13: "              │ 22 23 24 25 26 27 28        │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"2" fg=Reset bg=Reset mod=NONE, 19:"2" fg=Reset bg=Reset mod=NONE, 20:"3" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"4" fg=Reset bg=Reset mod=NONE, 25:"2" fg=Reset bg=Reset mod=NONE, 26:"5" fg=Reset bg=Reset mod=NONE, 28:"2" fg=Reset bg=Reset mod=NONE, 29:"6" fg=Reset bg=Reset mod=NONE, 31:"2" fg=Reset bg=Reset mod=NONE, 32:"7" fg=Reset bg=Reset mod=NONE, 34:"2" fg=Reset bg=Reset mod=NONE, 35:"8" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
14: "              │                             │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
15: "              │                             │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
16: "              │            ┌──────────┐     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 27:"┌" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"┐" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
17: "              │            │キ ャ ン セ ル │     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 27:"│" fg=Reset bg=Reset mod=NONE, 28:"キ" fg=Reset bg=Reset mod=NONE, 30:"ャ" fg=Reset bg=Reset mod=NONE, 32:"ン" fg=Reset bg=Reset mod=NONE, 34:"セ" fg=Reset bg=Reset mod=NONE, 36:"ル" fg=Reset bg=Reset mod=NONE, 38:"│" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
18: "              │            └──────────┘     │               " | 14:"│" fg=Reset bg=Reset mod=NONE, 27:"└" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"┘" fg=Reset bg=Reset mod=NONE, 44:"│" fg=Reset bg=Reset mod=NONE
19: "              └─────────────────────────────┘               " | 14:"└" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"┘" fg=Reset bg=Reset mod=NONE
20: "                                                            "
21: "                                                            "
22: "                                                            "
23: "                                                            "
