src/snapshots/redmine_tui_draft__test_support__header_fetch_failed_parent.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 3 }
00: "#42  Child issue                        " | 0:"#" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 1:"4" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 2:"2" fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 3:" " fg=Rgb(122, 162, 247) bg=Rgb(42, 47, 65) mod=BOLD, 5:"C" fg=Reset bg=Reset mod=BOLD, 6:"h" fg=Reset bg=Reset mod=BOLD, 7:"i" fg=Reset bg=Reset mod=BOLD, 8:"l" fg=Reset bg=Reset mod=BOLD, 9:"d" fg=Reset bg=Reset mod=BOLD, 10:" " fg=Reset bg=Reset mod=BOLD, 11:"i" fg=Reset bg=Reset mod=BOLD, 12:"s" fg=Reset bg=Reset mod=BOLD, 13:"s" fg=Reset bg=Reset mod=BOLD, 14:"u" fg=Reset bg=Reset mod=BOLD, 15:"e" fg=Reset bg=Reset mod=BOLD
01: "親 チ ケ ッ ト  #3 取 得 失 敗                   " | 0:"親" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 2:"チ" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 4:"ケ" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 6:"ッ" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 8:"ト" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 11:"#" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 12:"3" fg=Blue bg=Rgb(46, 58, 85) mod=NONE, 13:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 14:"取" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 16:"得" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 18:"失" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 20:"敗" fg=Rgb(128, 138, 158) bg=Rgb(46, 58, 85) mod=NONE, 22:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 23:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 24:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 25:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 26:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 27:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 28:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 29:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 30:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 31:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 32:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 33:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 34:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 35:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 36:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 37:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 38:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE, 39:" " fg=Reset bg=Rgb(46, 58, 85) mod=NONE
02: "                                        "
